<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    
    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:cardElevation="8dp"
        android:layout_margin="10dp"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/birimler"
            android:textSize="24sp"
            android:textColor="@color/colorBlack"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:cardElevation="8dp"
        android:layout_margin="10dp"
        android:id="@+id/card2"
        android:layout_below="@id/card1"
        android:layout_marginTop="14dp"
        app:cardCornerRadius="5dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/havadurumu"
            android:textSize="24sp"
            android:textColor="@color/colorBlack"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:id="@+id/card3"
        app:cardElevation="8dp"
        android:layout_below="@id/card2"
        android:layout_marginTop="14dp"
        app:cardCornerRadius="5dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/parola"
            android:textSize="24sp"
            android:textColor="@color/colorBlack"/>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        app:cardElevation="8dp"
        android:layout_below="@id/card3"
        android:layout_marginTop="14dp"
        app:cardCornerRadius="5dp"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/destek"
        android:textSize="24sp"
        android:textColor="@color/colorBlack" />
    </androidx.cardview.widget.CardView>
    

</RelativeLayout>